--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet" />
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg">
+    <!-- <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="Logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -67,11 +71,43 @@
           </ul>
         </div>
       </div>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg bg-light sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="#"><img src="./images/logo.png" width="30px" alt="logo"> DEV</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">SERVICE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">PROJECTS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">BLOGS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
   <main>
-    <section id="front-banner">
+    <!-- <section id="front-banner">
       <div class="container">
         <div class="row">
           <div class="col-xxl-12">
@@ -101,7 +137,23 @@
           </div>
         </div>
       </div>
+    </section> -->
+
+    <!-- Banner part start -->
+    <section id="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-xxl-12">
+            <div class="banner_txt">
+              <h1>Md Rahat Hossen Antor</h1>
+              <h4>A passionate Frontend focused Full-Stack Web Developer.</h4>
+              <a href="#">SEE PORTFOLIO</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+    <!-- Banner part end -->
   </main>
 
   <footer>
@@ -111,6 +163,7 @@
           <div class="footer-content text-center text-light">
             <h4>Thanks for visiting my website :)</h4>
             <p>Copyrights &copy; 2023 reserved by <strong>Md Rahat Hossen Antor</strong>.</p>
+            <h5>This page is under development!</h5>
           </div>
         </div>
       </div>
