--- a/index.html
+++ b/index.html
@@ -1,81 +1,33 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Md Rahat Hossen Antor</title>
+  <title>Developer</title>
+  <!-- Favicon -->
   <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet" />
+  
+  <!-- Font-Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  
+  <!-- Styles -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header>
-    <!-- <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="Logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 navigation-menu">
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://github.com/mdrahathossenantor"><i
-                  class="fa-brands fa-github"></i></a>
-            </li>
-            <li class="nav-item hide-icon">
-              <a class="nav-link" target="_blank"
-                href="https://stackoverflow.com/users/20984782/md-rahat-hossen-antor"><i
-                  class="fa-brands fa-stack-overflow"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/md-rahat-hossen-antor-534403254/"><i
-                  class="fa-brands fa-linkedin"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://www.facebook.com/profile.php?id=100086382246424"><i
-                  class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://www.instagram.com/mdrahathossenantor/"><i
-                  class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li class="nav-item hide-icon">
-              <a class="nav-link" target="_blank" href="https://twitter.com/MdRahatHossen_"><i
-                  class="fa-brands fa-twitter"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://www.youtube.com/channel/UCsceYYXWcfQUk6GMNqEZSdA"><i
-                  class="fa-brands fa-youtube"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_blank"
-                href="https://api.whatsapp.com/send/?phone=%2B8801776655689&text&type=phone_number&app_absent=0"><i
-                  class="fa-brands fa-whatsapp"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" target="_parent" href="tel:+8801776655689"><i class="fa-solid fa-phone"></i></a>
-            </li>
-            <li class="nav-item hide-icon">
-              <a class="nav-link" href="mailto:md.rahathossenantor@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-
     <nav class="navbar navbar-expand-lg bg-light sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="./images/logo.png" width="30px" alt="logo"> DEV</a>
+        <a class="navbar-brand" href="./index.html"><img src="./images/logo.png" width="30px" alt="logo"> DEVELOPER</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -83,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">ABOUT</a>
@@ -92,7 +44,7 @@
               <a class="nav-link" href="#">SERVICE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">PROJECTS</a>
+              <a class="nav-link" href="#work_demo">PROJECTS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">BLOGS</a>
@@ -107,53 +59,103 @@
   </header>
 
   <main>
-    <!-- <section id="front-banner">
-      <div class="container">
-        <div class="row">
-          <div class="col-xxl-12">
-            <div class="banner-content">
-              <h1>Hello! <br> I'm Md Rahat Hossen Antor!</h1>
-              <h3>Web Developer</h3>
-              <div class="banner-text">
-                <p>I'm a passionate Frontend focused Web Developer with 1 year (2022 - present) of learning experience.
-                  I recently completed a Web Development course from Programming-Hero, which has given me the latest
-                  skills and knowledge in the Web and Software industry. I also worked as a freelance Web Developer at
-                  fiverr.com, upwork.com, freelancer.com where I learned practical skills in building websites for
-                  clients.</p>
-                <p>My focus is on primarily Designing and Developing Websites that look great and work well. I'm skilled
-                  in a range of programming languages and platforms, including HTML, CSS, JavaScript and PHP. I have
-                  worked on websites for different industries, such as Construction, Real estate, Blogging, Finance,
-                  E-commerce, and Education.</p>
-                <p class="hide">I enjoy working with other Web Developers and Designers to make Websites that match the
-                  client's brand and business objectives. I'm committed to keeping up with the latest industry trends
-                  and best practices, and I attend professional Web Development courses to improve my skills.</p>
-                <p class="hide">My focus is to create websites that are both visually appealing and easy to use. I take
-                  pride in exceeding client expectations and delivering projects on time.</p>
-                <p>If you are looking for a Web Developer with skills and experience, please feel free to contact me at:
-                  <em><a class="nav-link"
-                      href="mailto:md.rahathossenantor@gmail.com">md.rahathossenantor@gmail.com</a></em></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
-    <!-- Banner part start -->
+    <!-- Banner -->
     <section id="banner">
       <div class="container">
         <div class="row">
           <div class="col-xxl-12">
             <div class="banner_txt">
-              <h1>Md Rahat Hossen Antor</h1>
-              <h4>A passionate Frontend focused Full-Stack Web Developer.</h4>
+              <h1>Hello There <img src="./images/hello.gif" width="35px" alt="hi">, I'm Md Rahat Hossen Antor!</h1>
+              <h4>A passionate frontend focused web developer.</h4>
               <a href="#">SEE PORTFOLIO</a>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Banner part end -->
+
+    <!-- Projects -->
+    <section id="work_demo">
+      <div class="container">
+        <div class="row">
+          <div class="col-xxl-12">
+            <div class="demo_head">
+              <h3>My Latest Projects</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
+            <div class="demo_img">
+              <img src="./images/work01.jpg" class="img-fluid w-100" alt="image" />
+            </div>
+            <div class="demo_img_content">
+              <h4>Programming-Hero</h4>
+              <p>
+                Personalized, fun, and interactive learning process. Enjoy our gamified courses to master python, Web development, cyber security, C, C++ course and more.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
+            <div class="demo_img">
+              <img src="./images/work02.jpg" class="img-fluid w-100" alt="image" />
+            </div>
+            <div class="demo_img_content">
+              <h4>Tinyone</h4>
+              <p>
+                Learn Programming and learn coding in a fun. Beginners and advanced tutorial for absolute beginners. Learn everything you need to get hired.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
+            <div class="demo_img">
+              <img src="./images/work03.jpg" class="img-fluid w-100" alt="image" />
+            </div>
+            <div class="demo_img_content">
+              <h4>Lambda</h4>
+              <p>
+                If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
+            <div class="demo_img">
+              <img src="./images/work01.jpg" class="img-fluid w-100" alt="image" />
+            </div>
+            <div class="demo_img_content">
+              <h4>Hot Gadgets</h4>
+              <p>
+                Personalized, fun, and interactive learning process. Enjoy our gamified courses to master python, Web development, cyber security, C, C++ course and more.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
+            <div class="demo_img">
+              <img src="./images/work02.jpg" class="img-fluid w-100" alt="image" />
+            </div>
+            <div class="demo_img_content">
+              <h4>Panda Commarce</h4>
+              <p>
+                Learn Programming and learn coding in a fun. Beginners and advanced tutorial for absolute beginners. Learn everything you need to get hired.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
+            <div class="demo_img">
+              <img src="./images/work03.jpg" class="img-fluid w-100" alt="image" />
+            </div>
+            <div class="demo_img_content">
+              <h4>Lambda</h4>
+              <p>
+                If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -162,19 +164,51 @@
         <div class="col-xxl-12">
           <div class="footer-content text-center text-light">
             <h4>Thanks for visiting my website :)</h4>
+            <h5>This page is under development! Current Time: <span id="time"></span></h5>
             <p>Copyrights &copy; 2023 reserved by <strong>Md Rahat Hossen Antor</strong>.</p>
-            <h5>This page is under development!</h5>
           </div>
         </div>
       </div>
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+  <!-- JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/script.js"></script>
 </body>
 </html>
+
 <!-- version 1.0 (09:08 PM, 14-04-2023) -->
 <!-- version 2.0 (10:41 PM, 20-05-2023) -->
+
+<!-- <div class="banner-text">
+  <p>I'm a passionate Frontend focused Web Developer with 1 year (2022 - present) of learning experience.
+    I recently completed a Web Development course from Programming-Hero, which has given me the latest
+    skills and knowledge in the Web and Software industry. I also worked as a freelance Web Developer at
+    fiverr.com, upwork.com, freelancer.com where I learned practical skills in building websites for
+    clients.</p>
+  <p>My focus is on primarily Designing and Developing Websites that look great and work well. I'm skilled
+    in a range of programming languages and platforms, including HTML, CSS, JavaScript and PHP. I have
+    worked on websites for different industries, such as Construction, Real estate, Blogging, Finance,
+    E-commerce, and Education.</p>
+  <p class="hide">I enjoy working with other Web Developers and Designers to make Websites that match the
+    client's brand and business objectives. I'm committed to keeping up with the latest industry trends
+    and best practices, and I attend professional Web Development courses to improve my skills.</p>
+  <p class="hide">My focus is to create websites that are both visually appealing and easy to use. I take
+    pride in exceeding client expectations and delivering projects on time.</p>
+  <p>If you are looking for a Web Developer with skills and experience, please feel free to contact me at:
+    <em><a class="nav-link"
+        href="mailto:md.rahathossenantor@gmail.com">md.rahathossenantor@gmail.com</a></em></p>
+</div> -->
+
+<!-- <a class="nav-link" href="mailto:md.rahathossenantor@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+<a class="nav-link" target="_parent" href="tel:+8801776655689"><i class="fa-solid fa-phone"></i></a>
+<a class="nav-link" target="_blank" href="https://api.whatsapp.com/send/?phone=%2B8801776655689&text&type=phone_number&app_absent=0"><i class="fa-brands fa-whatsapp"></i></a>
+<a class="nav-link" target="_blank" href="https://www.youtube.com/channel/UCsceYYXWcfQUk6GMNqEZSdA"><i class="fa-brands fa-youtube"></i></a>
+<a class="nav-link" target="_blank" href="https://twitter.com/MdRahatHossen_"><i class="fa-brands fa-twitter"></i></a>
+<a class="nav-link" target="_blank" href="https://www.instagram.com/mdrahathossenantor/"><i class="fa-brands fa-instagram"></i></a>
+<a class="nav-link" target="_blank" href="https://www.facebook.com/profile.php?id=100086382246424"><i class="fa-brands fa-facebook"></i></a>
+<a class="nav-link" target="_blank" href="https://www.linkedin.com/in/md-rahat-hossen-antor-534403254/"><i class="fa-brands fa-linkedin"></i></a>
+<a class="nav-link" target="_blank" href="https://stackoverflow.com/users/20984782/md-rahat-hossen-antor"><i class="fa-brands fa-stack-overflow"></i></a>
+<a class="nav-link" target="_blank" href="https://github.com/mdrahathossenantor"><i class="fa-brands fa-github"></i></a> -->
