--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   
   <!-- Styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -88,7 +87,15 @@
         <div class="row">
           <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="demo_img">
-              <img src="./images/work01.jpg" class="img-fluid w-100" alt="image" />
+              <img src="./images/programming-hero.png" class="img-fluid w-100" alt="image" />
+              <div class="work_overlay">
+                <a href="https://mdrahathossenantor.github.io/programming-hero/" target="_blank">
+                  <div class="overlay_text text-center">
+                    <h5>Programming-Hero</h5>
+                    <p>visit Programming-Hero</p>
+                  </div>
+                </a>
+              </div>
             </div>
             <div class="demo_img_content">
               <h4>Programming-Hero</h4>
@@ -99,7 +106,15 @@
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="demo_img">
-              <img src="./images/work02.jpg" class="img-fluid w-100" alt="image" />
+              <img src="./images/tinyone.png" class="img-fluid w-100" alt="image" />
+              <div class="work_overlay">
+                <a href="https://mdrahathossenantor.github.io/tinyone/" target="_blank">
+                  <div class="overlay_text text-center">
+                    <h5>Tinyone</h5>
+                    <p>visit Tinyone</p>
+                  </div>
+                </a>
+              </div>
             </div>
             <div class="demo_img_content">
               <h4>Tinyone</h4>
@@ -110,7 +125,15 @@
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="demo_img">
-              <img src="./images/work03.jpg" class="img-fluid w-100" alt="image" />
+              <img src="./images/lambda.png" class="img-fluid w-100" alt="image" />
+              <div class="work_overlay">
+                <a href="https://mdrahathossenantor.github.io/lambda/" target="_blank">
+                  <div class="overlay_text text-center">
+                    <h5>Lambda</h5>
+                    <p>visit Lambda</p>
+                  </div>
+                </a>
+              </div>
             </div>
             <div class="demo_img_content">
               <h4>Lambda</h4>
@@ -122,34 +145,58 @@
 
           <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="demo_img">
-              <img src="./images/work01.jpg" class="img-fluid w-100" alt="image" />
+              <img src="./images/hot-gadgets.png" class="img-fluid w-100" alt="image" />
+              <div class="work_overlay">
+                <a href="https://mdrahathossenantor.github.io/hot-gadgets/" target="_blank">
+                  <div class="overlay_text text-center">
+                    <h5>Hot Gadgets</h5>
+                    <p>visit Hot Gadgets</p>
+                  </div>
+                </a>
+              </div>
             </div>
             <div class="demo_img_content">
               <h4>Hot Gadgets</h4>
               <p>
-                Personalized, fun, and interactive learning process. Enjoy our gamified courses to master python, Web development, cyber security, C, C++ course and more.
+                Gadgets are also known as gizmos or gears. The name means a small smart tool that serves a unique function.
               </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="demo_img">
-              <img src="./images/work02.jpg" class="img-fluid w-100" alt="image" />
+              <img src="./images/panda-commarce.png" class="img-fluid w-100" alt="image" />
+              <div class="work_overlay">
+                <a href="https://mdrahathossenantor.github.io/panda-commarce/" target="_blank">
+                  <div class="overlay_text text-center">
+                    <h5>Panda Commarce</h5>
+                    <p>visit Panda Commarce</p>
+                  </div>
+                </a>
+              </div>
             </div>
             <div class="demo_img_content">
               <h4>Panda Commarce</h4>
               <p>
-                Learn Programming and learn coding in a fun. Beginners and advanced tutorial for absolute beginners. Learn everything you need to get hired.
+                E-commerce in Bangladesh refers to the electronic commerce sector of Bangladesh business.
               </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="demo_img">
-              <img src="./images/work03.jpg" class="img-fluid w-100" alt="image" />
+              <img src="./images/veer.png" class="img-fluid w-100" alt="image" />
+              <div class="work_overlay">
+                <a href="https://mdrahathossenantor.github.io/veer/" target="_blank">
+                  <div class="overlay_text text-center">
+                    <h5>Veer</h5>
+                    <p>visit Veer</p>
+                  </div>
+                </a>
+              </div>
             </div>
             <div class="demo_img_content">
-              <h4>Lambda</h4>
+              <h4>Veer</h4>
               <p>
-                If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.
+                Design means to create a plan or sketch of something that is going to be made later.
               </p>
             </div>
           </div>
@@ -174,7 +221,6 @@
 
   <!-- JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/script.js"></script>
 </body>
 </html>
