--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +7,22 @@
   <title>Developer</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-  
+
   <!-- Font-Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet" />
+
   <!-- Styles -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -58,7 +62,6 @@
   </header>
 
   <main>
-
     <!-- Banner -->
     <section id="banner">
       <div class="container">
@@ -70,6 +73,55 @@
               <a href="#">SEE PORTFOLIO</a>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features -->
+    <section id="feature">
+      <div class="container">
+        <div class="row">
+          <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+            <div class="features_content">
+              <div class="features_icon first-icon">
+                <p><i class="fa-solid fa-lightbulb"></i></p>
+              </div>
+              <div class="features_text">
+                <h4>Creeative Ideas</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+            <div class="features_content">
+              <div class="features_icon second-icon">
+                <p><i class="fa-solid fa-pen-nib"></i></p>
+              </div>
+              <div class="features_text">
+                <h4>Responsive Design</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-xxl-3 col-xl-3 col-lg-3 col-sm-6 hidden-icon">
+            <div class="features_content">
+              <div class="features_icon third-icon">
+                <p><i class="fa-solid fa-truck"></i></p>
+              </div>
+              <div class="features_text">
+                <h4>On Time Delivery</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+            <div class="features_content">
+              <div class="features_icon fourth-icon">
+                <p><i class="fa-solid fa-star"></i></p>
+              </div>
+              <div class="features_text">
+                <h4>10+ Reviews</h4>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="features_l_border"></div> -->
         </div>
       </div>
     </section>
@@ -100,7 +152,8 @@
             <div class="demo_img_content">
               <h4>Programming-Hero</h4>
               <p>
-                Personalized, fun, and interactive learning process. Enjoy our gamified courses to master python, Web development, cyber security, C, C++ course and more.
+                Personalized, fun, and interactive learning process. Enjoy our gamified courses to master python, Web
+                development, cyber security, C, C++ course and more.
               </p>
             </div>
           </div>
@@ -119,7 +172,8 @@
             <div class="demo_img_content">
               <h4>Tinyone</h4>
               <p>
-                Learn Programming and learn coding in a fun. Beginners and advanced tutorial for absolute beginners. Learn everything you need to get hired.
+                Learn Programming and learn coding in a fun. Beginners and advanced tutorial for absolute beginners.
+                Learn everything you need to get hired.
               </p>
             </div>
           </div>
@@ -138,7 +192,8 @@
             <div class="demo_img_content">
               <h4>Lambda</h4>
               <p>
-                If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.
+                If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming
+                back for more. Perfect materials and freshly baked food.
               </p>
             </div>
           </div>
@@ -158,7 +213,8 @@
             <div class="demo_img_content">
               <h4>Hot Gadgets</h4>
               <p>
-                Gadgets are also known as gizmos or gears. The name means a small smart tool that serves a unique function.
+                Gadgets are also known as gizmos or gears. The name means a small smart tool that serves a unique
+                function.
               </p>
             </div>
           </div>
@@ -206,12 +262,54 @@
   </main>
 
   <footer>
+
+    <h4 class="text-center welcome">Thanks for visiting my website :)</h4>
+
     <div class="container">
+      <div class="row footer-links">
+        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
+          <div class="footer_list">
+            <ul>
+              <li><a target="_blank" href="https://github.com/mdrahathossenantor"><i class="fa-brands fa-github"></i> GitHub</a></li>
+              <li><a target="_blank" href="https://stackoverflow.com/users/20984782/md-rahat-hossen-antor"><i class="fa-brands fa-stack-overflow"></i> Stack Overflow</a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/in/md-rahat-hossen-antor-534403254/"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
+              <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100086382246424"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+              <li><a target="_blank" href="https://www.instagram.com/mdrahathossenantor/"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
+          <div class="footer_list">
+            <ul>
+              <li><a target="_blank" href="https://twitter.com/MdRahatHossen_"><i class="fa-brands fa-twitter"></i> Twitter</a></li>
+              <li><a target="_blank" href="https://www.youtube.com/channel/UCsceYYXWcfQUk6GMNqEZSdA"><i class="fa-brands fa-youtube"></i> YouTube</a></li>
+              <li><a target="_blank" href="https://api.whatsapp.com/send/?phone=%2B8801776655689&text&type=phone_number&app_absent=0"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a></li>
+              <li><a target="_parent" href="tel:+8801776655689"><i class="fa-solid fa-phone"></i> Phone</a></li>
+              <li><a href="mailto:md.rahathossenantor@gmail.com"><i class="fa-solid fa-envelope"></i> E-mail</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xxl-3 col-xl-3 hidden-lists col-sm-4">
+          <div class="footer_list">
+            <ul>
+              <li><a href="#">Contact Me</a></li>
+              <li><a href="#">About Me</a></li>
+              <li><a href="#">Privacy & Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Return Policy</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-sm-12 about-dev">
+          <h5>DEVELOPER &#174;</h5>
+          <p>DEVELOPER &#174; is a personal professional website that brings people together for personal and business communication etc.</p>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-xxl-12">
           <div class="footer-content text-center text-light">
-            <h4>Thanks for visiting my website :)</h4>
-            <h5>This page is under development! Current Time: <span id="time"></span></h5>
+            <!-- <h5>This page is under development! Current Time: <span id="time"></span></h5> -->
             <p>Copyrights &copy; 2023 reserved by <strong>Md Rahat Hossen Antor</strong>.</p>
           </div>
         </div>
@@ -219,14 +317,15 @@
     </div>
   </footer>
 
-  <!-- JavaScript -->
+  <!-- JavaScripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="./js/script.js"></script>
 </body>
 </html>
 
 <!-- version 1.0 (09:08 PM, 14-04-2023) -->
-<!-- version 2.0 (10:41 PM, 20-05-2023) -->
+<!-- version mountain 2.0 (10:41 PM, 20-05-2023) -->
+<!-- version rain forest 3.0 (08:08 PM, 24-05-2023) -->
 
 <!-- <div class="banner-text">
   <p>I'm a passionate Frontend focused Web Developer with 1 year (2022 - present) of learning experience.
@@ -247,14 +346,3 @@
     <em><a class="nav-link"
         href="mailto:md.rahathossenantor@gmail.com">md.rahathossenantor@gmail.com</a></em></p>
 </div> -->
-
-<!-- <a class="nav-link" href="mailto:md.rahathossenantor@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-<a class="nav-link" target="_parent" href="tel:+8801776655689"><i class="fa-solid fa-phone"></i></a>
-<a class="nav-link" target="_blank" href="https://api.whatsapp.com/send/?phone=%2B8801776655689&text&type=phone_number&app_absent=0"><i class="fa-brands fa-whatsapp"></i></a>
-<a class="nav-link" target="_blank" href="https://www.youtube.com/channel/UCsceYYXWcfQUk6GMNqEZSdA"><i class="fa-brands fa-youtube"></i></a>
-<a class="nav-link" target="_blank" href="https://twitter.com/MdRahatHossen_"><i class="fa-brands fa-twitter"></i></a>
-<a class="nav-link" target="_blank" href="https://www.instagram.com/mdrahathossenantor/"><i class="fa-brands fa-instagram"></i></a>
-<a class="nav-link" target="_blank" href="https://www.facebook.com/profile.php?id=100086382246424"><i class="fa-brands fa-facebook"></i></a>
-<a class="nav-link" target="_blank" href="https://www.linkedin.com/in/md-rahat-hossen-antor-534403254/"><i class="fa-brands fa-linkedin"></i></a>
-<a class="nav-link" target="_blank" href="https://stackoverflow.com/users/20984782/md-rahat-hossen-antor"><i class="fa-brands fa-stack-overflow"></i></a>
-<a class="nav-link" target="_blank" href="https://github.com/mdrahathossenantor"><i class="fa-brands fa-github"></i></a> -->
