customized some sections

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="#feature">ABOUT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">SERVICE</a>
@@ -50,10 +50,10 @@
               <a class="nav-link" href="#work_demo">PROJECTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">BLOGS</a>
+              <a class="nav-link" href="#footer-links">BLOGS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT</a>
+              <a class="nav-link" href="#footer-links">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -87,7 +87,7 @@
                 <p><i class="fa-solid fa-lightbulb"></i></p>
               </div>
               <div class="features_text">
-                <h4>Creeative Ideas</h4>
+                <h5>Creeative Ideas</h5>
               </div>
             </div>
           </div>
@@ -97,17 +97,17 @@
                 <p><i class="fa-solid fa-pen-nib"></i></p>
               </div>
               <div class="features_text">
-                <h4>Responsive Design</h4>
+                <h5>Responsive Design</h5>
               </div>
             </div>
           </div>
           <div class="col-xxl-3 col-xl-3 col-lg-3 col-sm-6 hidden-icon">
             <div class="features_content">
               <div class="features_icon third-icon">
-                <p><i class="fa-solid fa-truck"></i></p>
+                <p><i class="fa-solid fa-computer"></i></p>
               </div>
               <div class="features_text">
-                <h4>On Time Delivery</h4>
+                <h5>Quality Products</h5>
               </div>
             </div>
           </div>
@@ -117,11 +117,10 @@
                 <p><i class="fa-solid fa-star"></i></p>
               </div>
               <div class="features_text">
-                <h4>10+ Reviews</h4>
+                <h5>20+ Reviews</h5>
               </div>
             </div>
           </div>
-          <!-- <div class="features_l_border"></div> -->
         </div>
       </div>
     </section>
@@ -132,7 +131,7 @@
         <div class="row">
           <div class="col-xxl-12">
             <div class="demo_head">
-              <h3>My Latest Projects</h3>
+              <h2>Latest Projects</h2>
             </div>
           </div>
         </div>
@@ -262,11 +261,9 @@
   </main>
 
   <footer>
-
     <h4 class="text-center welcome">Thanks for visiting my website :)</h4>
-
     <div class="container">
-      <div class="row footer-links">
+      <div class="row footer-links" id="footer-links">
         <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
           <div class="footer_list">
             <ul>
@@ -292,8 +289,8 @@
         <div class="col-xxl-3 col-xl-3 hidden-lists col-sm-4">
           <div class="footer_list">
             <ul>
-              <li><a href="#">Contact Me</a></li>
-              <li><a href="#">About Me</a></li>
+              <li><a href="#">Contact Developer</a></li>
+              <li><a href="#">About Developer</a></li>
               <li><a href="#">Privacy & Policy</a></li>
               <li><a href="#">Terms & Conditions</a></li>
               <li><a href="#">Return Policy</a></li>
@@ -302,7 +299,7 @@
         </div>
         <div class="col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-sm-12 about-dev">
           <h5>DEVELOPER &#174;</h5>
-          <p>DEVELOPER &#174; is a personal professional website that brings people together for personal and business communication etc.</p>
+          <p>Developer &#174; is a Frontend focused Full-Stack Web Development service provider with 1 year (2022 - present) of working experienced personal brand.</p>
         </div>
       </div>
 
