customized some text

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
   </main>
 
   <footer>
-    <h4 class="text-center welcome">Thanks for visiting my website :)</h4>
     <div class="container">
+      <h4 class="text-center welcome">Thanks for visiting my website :)</h4>
       <div class="row footer-links" id="footer-links">
         <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
           <div class="footer_list">
@@ -299,7 +299,7 @@
         </div>
         <div class="col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-sm-12 about-dev">
           <h5>DEVELOPER &#174;</h5>
-          <p>Developer &#174; is a Frontend focused Full-Stack Web Development service provider with 1 year (2022 - present) of working experienced personal brand.</p>
+          <p>Developer &#174; is a Frontend focused Full-Stack Web Development service provider in Bangladesh with 1 year (2022 - present) of working experienced personal brand.</p>
         </div>
       </div>
 
@@ -307,7 +307,7 @@
         <div class="col-xxl-12">
           <div class="footer-content text-center text-light">
             <!-- <h5>This page is under development! Current Time: <span id="time"></span></h5> -->
-            <p>Copyrights &copy; 2023 reserved by <strong>Md Rahat Hossen Antor</strong>.</p>
+            <small>Copyrights &copy; 2023 reserved by <strong>Md Rahat Hossen Antor</strong>.</small>
           </div>
         </div>
       </div>
