--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
           </div>
         </div>
         <div class="col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-sm-12 about-dev">
-          <h5><img src="./images/logo.png" width="27px" alt="logo"> DEVELOPER &#174;</h5>
-          <p>Developer &#174; is a Frontend focused Full-Stack Web Development service provider in Bangladesh with 1 year (2022 - present) of working experienced personal brand.</p>
+          <div><h5><img src="./images/logo.png" width="27px" alt="logo"> DEVELOPER</h5> <sup>&#174;</sup></div>
+          <p>Developer <sup>&#174;</sup> is a Frontend focused Full-Stack Web Development service provider in Bangladesh with 1 year (2022 - present) of working experienced personal brand.</p>
         </div>
       </div>
 
