--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         </div>
         <div class="col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-sm-12 about-dev">
           <div><h5><img src="./images/logo.png" width="27px" alt="logo"> DEVELOPER <sup>&#174;</sup></h5></div>
-          <p>Developer <sup>&#174;</sup> is a Frontend focused Web Development service provider in Bangladesh with 1 year (2022 - present) of working experienced personal brand.</p>
+          <p>Developer <sup>&#174;</sup> is a Frontend Web Development service provider in Bangladesh with 1 year (2022 - present) of working experience.</p>
         </div>
       </div>
 
