Updated social links.

--- a/index.html
+++ b/index.html
@@ -267,18 +267,18 @@
         <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
           <div class="footer_list">
             <ul>
-              <li><a target="_blank" href="https://github.com/mdrahathossenantor"><i class="fa-brands fa-github"></i> GitHub</a></li>
+              <li><a target="_blank" href="https://github.com/rahathossenantor"><i class="fa-brands fa-github"></i> GitHub</a></li>
               <li><a target="_blank" href="https://stackoverflow.com/users/20984782/md-rahat-hossen-antor"><i class="fa-brands fa-stack-overflow"></i> Stack Overflow</a></li>
-              <li><a target="_blank" href="https://www.linkedin.com/in/md-rahat-hossen-antor-534403254/"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
-              <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100086382246424"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
-              <li><a target="_blank" href="https://www.instagram.com/mdrahathossenantor/"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/in/rahathossenantor/"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
+              <li><a target="_blank" href="https://www.facebook.com/rahathossenantor"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+              <li><a target="_blank" href="https://www.instagram.com/rahathossenantor/"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
             </ul>
           </div>
         </div>
         <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
           <div class="footer_list">
             <ul>
-              <li><a target="_blank" href="https://twitter.com/MdRahatHossen_"><i class="fa-brands fa-twitter"></i> Twitter</a></li>
+              <li><a target="_blank" href="https://twitter.com/rahathossen_"><i class="fa-brands fa-twitter"></i> Twitter</a></li>
               <li><a target="_blank" href="https://www.youtube.com/channel/UCsceYYXWcfQUk6GMNqEZSdA"><i class="fa-brands fa-youtube"></i> YouTube</a></li>
               <li><a target="_blank" href="https://api.whatsapp.com/send/?phone=%2B8801776655689&text&type=phone_number&app_absent=0"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a></li>
               <li><a target="_parent" href="tel:+8801776655689"><i class="fa-solid fa-phone"></i> Phone</a></li>
@@ -289,11 +289,11 @@
         <div class="col-xxl-3 col-xl-3 hidden-lists col-sm-4">
           <div class="footer_list">
             <ul>
-              <li><a href="#">Contact Developer</a></li>
-              <li><a href="#">About Developer</a></li>
-              <li><a href="#">Privacy & Policy</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Return Policy</a></li>
+              <li><a href="">Contact Developer</a></li>
+              <li><a href="">About Developer</a></li>
+              <li><a href="">Privacy & Policy</a></li>
+              <li><a href="">Terms & Conditions</a></li>
+              <li><a href="">Return Policy</a></li>
             </ul>
           </div>
         </div>
