--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="demo_img">
               <img src="./images/programming-hero.png" class="img-fluid w-100" alt="image" />
               <div class="work_overlay">
-                <a href="https://mdrahathossenantor.github.io/programming-hero/" target="_blank">
+                <a href="https://rahathossenantor.github.io/programming-hero/" target="_blank">
                   <div class="overlay_text text-center">
                     <h5>Programming-Hero</h5>
                     <p>visit Programming-Hero</p>
@@ -160,7 +160,7 @@
             <div class="demo_img">
               <img src="./images/tinyone.png" class="img-fluid w-100" alt="image" />
               <div class="work_overlay">
-                <a href="https://mdrahathossenantor.github.io/tinyone/" target="_blank">
+                <a href="https://rahathossenantor.github.io/tinyone/" target="_blank">
                   <div class="overlay_text text-center">
                     <h5>Tinyone</h5>
                     <p>visit Tinyone</p>
@@ -180,7 +180,7 @@
             <div class="demo_img">
               <img src="./images/lambda.png" class="img-fluid w-100" alt="image" />
               <div class="work_overlay">
-                <a href="https://mdrahathossenantor.github.io/lambda/" target="_blank">
+                <a href="https://rahathossenantor.github.io/lambda/" target="_blank">
                   <div class="overlay_text text-center">
                     <h5>Lambda</h5>
                     <p>visit Lambda</p>
@@ -201,7 +201,7 @@
             <div class="demo_img">
               <img src="./images/hot-gadgets.png" class="img-fluid w-100" alt="image" />
               <div class="work_overlay">
-                <a href="https://mdrahathossenantor.github.io/hot-gadgets/" target="_blank">
+                <a href="https://rahathossenantor.github.io/hot-gadgets/" target="_blank">
                   <div class="overlay_text text-center">
                     <h5>Hot Gadgets</h5>
                     <p>visit Hot Gadgets</p>
@@ -221,7 +221,7 @@
             <div class="demo_img">
               <img src="./images/panda-commarce.png" class="img-fluid w-100" alt="image" />
               <div class="work_overlay">
-                <a href="https://mdrahathossenantor.github.io/panda-commarce/" target="_blank">
+                <a href="https://rahathossenantor.github.io/panda-commarce/" target="_blank">
                   <div class="overlay_text text-center">
                     <h5>Panda Commarce</h5>
                     <p>visit Panda Commarce</p>
@@ -240,7 +240,7 @@
             <div class="demo_img">
               <img src="./images/veer.png" class="img-fluid w-100" alt="image" />
               <div class="work_overlay">
-                <a href="https://mdrahathossenantor.github.io/veer/" target="_blank">
+                <a href="https://rahathossenantor.github.io/veer/" target="_blank">
                   <div class="overlay_text text-center">
                     <h5>Veer</h5>
                     <p>visit Veer</p>
